--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,7 @@
             </div>
             <div class="contact">
               <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
+                <a href="https://github.com/pbourguignon">github.com/pbourguignon</a><br />
               </p>
             </div>
           </div>
