--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,7 @@
             <div class="contact">
               <p>
                 Your Name<br />
-                What You Are<br />
-                you@example.com
+                pybourguignon@gmail.com
               </p>
             </div>
             <div class="contact">
